--- a/index.html
+++ b/index.html
@@ -361,6 +361,14 @@
         <td>Srpski ćirilica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
         <td>Мали принц</td>
+        <td class="image"><a href="naslovna/srpski-cirilica_lira.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_lira.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-cirilica_lira.jpg" target="_blank"><img src="prva_th/srpski-cirilica_lira.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski ćirilica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_Cyrillic_alphabet" target="_blank">Serbian Cyrillic</a></td>
+        <td>Мали принц</td>
         <td class="image"><a href="naslovna/srpski-cirilica_blic.jpg" target="_blank"><img src="naslovna_th/srpski-cirilica_blic.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-cirilica_blic.jpg" target="_blank"><img src="prva_th/srpski-cirilica_blic.jpg" width="50px"></a></td>
       </tr>
