--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2606,6 +2606,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Šleski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Silesian_language" target="_blank">Silesian language</a></td>
+        <td>Mały Princ</td>
+        <td class="image"><a href="naslovna/sleski.jpg" target="_blank"><img src="naslovna_th/sleski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sleski.jpg" target="_blank"><img src="prva_th/sleski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
         <td>El Principito</td>
