--- a/index.html
+++ b/index.html
@@ -2358,6 +2358,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Poljski, Velikopoljski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Greater_Poland_dialect_group" target="_blank">Polish Greater Poland dialect</a></td>
+        <td>Książę Szaranek</td>
+        <td class="image"><a href="naslovna/velikopoljski.jpg" target="_blank"><img src="naslovna_th/velikopoljski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/velikopoljski.jpg" target="_blank"><img src="prva_th/velikopoljski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Portugalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Portuguese_language" target="_blank">Portuguese language</a></td>
         <td>O Principezinho</td>
