--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2316,6 +2316,14 @@
         <td class="image"><a href="naslovna/poljskipodhale.jpg" target="_blank"><img src="naslovna_th/poljskipodhale.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/poljskipodhale.jpg" target="_blank"><img src="prva_th/poljskipodhale.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Poljski, Velikopoljski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Greater_Poland_dialect_group" target="_blank">Polish Greater Poland dialect</a></td>
+        <td>Książę Szaranek</td>
+        <td class="image"><a href="naslovna/velikopoljski.jpg" target="_blank"><img src="naslovna_th/velikopoljski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/velikopoljski.jpg" target="_blank"><img src="prva_th/velikopoljski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Portugalski jezik</td>
