--- a/index.html
+++ b/index.html
@@ -1598,6 +1598,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Napolitanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Neapolitan_language" target="_blank">Italian, Neapolitan dialect</a></td>
+        <td>'O princepe nennillo</td>
+        <td class="image"><a href="naslovna/italijanski-napolitanski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-napolitanski_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-napolitanski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-napolitanski_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Sabinjanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Sabino_dialect" target="_blank">Italian, Sabino dialect</a></td>
         <td>Ju Principe Ƶicu</td>
