--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1556,6 +1556,14 @@
         <td class="image"><a href="naslovna/italijanski-milanski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-milanski_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-milanski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-milanski_dijalekt.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Napolitanski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Neapolitan_language" target="_blank">Italian, Neapolitan dialect</a></td>
+        <td>'O princepe nennillo</td>
+        <td class="image"><a href="naslovna/italijanski-napolitanski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-napolitanski_dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski-napolitanski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-napolitanski_dijalekt.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Sabinjanski dijalekt</td>
