--- a/index.html
+++ b/index.html
@@ -814,6 +814,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Azerski jezik (sever)</td>
+        <td><a href="https://en.wikipedia.org/wiki/Azerbaijani_language" target="_blank">Azerbaijani language (North)</a></td>
+        <td>Kiçik Prins</td>
+        <td class="image"><a href="naslovna/azerski-severni.jpg" target="_blank"><img src="naslovna_th/azerski-severni.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/azerski-severni.jpg" target="_blank"><img src="prva_th/azerski-severni.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Balinežanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Balinese_language" target="_blank">Balinese language</a></td>
         <td>Raja Cenik | ᬭᬵᬚᬘᭂᬦᬶᬓ᭄</td>
