--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -100,6 +100,14 @@
         <td class="image"><a href="naslovna/srpski-latinica_partenon.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_partenon.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/srpski-latinica_partenon.jpg" target="_blank"><img src="prva_th/srpski-latinica_partenon.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpskimini-latinica_dobra.jpg" target="_blank"><img src="naslovna_th/srpskimini-latinica_dobra.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpskimini-latinica_dobra.jpg" target="_blank"><img src="prva_th/srpskimini-latinica_dobra.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
