--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2214,6 +2214,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, bezelski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Basel_German" target="_blank">Basel German dialect</a></td>
+        <td>Dr gläi Brinz</td>
+        <td class="image"><a href="naslovna/nemacki-bazelski.jpg" target="_blank"><img src="naslovna_th/nemacki-bazelski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki-bazelski.jpg" target="_blank"><img src="prva_th/nemacki-bazelski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, Bern dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Bernese_German" target="_blank">Bernese German</a></td>
         <td>Der Chly Prinz</td>
