--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1868,6 +1868,14 @@
         <td class="image"><a href="naslovna/kineski.jpg" target="_blank"><img src="naslovna_th/kineski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kineski.jpg" target="_blank"><img src="prva_th/kineski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kineski Mandarin jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Standard_Chinese" target="_blank">Standard Chinese language</a></td>
+        <td>小王子</td>
+        <td class="image"><a href="naslovna/kineski_mandarin" target="_blank"><img src="naslovna_th/kineski_mandarin.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kineski_mandarin.jpg" target="_blank"><img src="prva_th/kineski_mandarin.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kineski Minan Hokien</td>
