--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1086,6 +1086,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Češki Hanački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Moravian_dialects#Central_Moravian" target="_blank">Czech Hanakian language</a></td>
+        <td>Malé královské sênek</td> 
+        <td class="image"><a href="naslovna/češki_hanački.jpg" target="_blank"><img src="naslovna_th/češki_hanački.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/češki_hanački.jpg" target="_blank"><img src="prva_th/češki_hanački.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Češki Valaški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Moravian_Wallachia" target="_blank">Czech Wallachian language</a></td>
         <td>Malučký princ</td>
