--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1095,7 +1095,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Češki, Krkonoše dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Czech_language" target="_blank">Czech language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Giant_Mountains" target="_blank">Czech Krkonoše language</a></td>
         <td>Malej princ</td>
         <td class="image"><a href="naslovna/češki_krkonoše-dijalekt.jpg" target="_blank"><img src="naslovna_th/češki_krkonoše-dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/češki_krkonoše-dijalekt.jpg" target="_blank"><img src="prva_th/češki_krkonoše-dijalekt.jpg" width="50px"></a></td>
