--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1100,6 +1100,14 @@
         <td class="image"><a href="naslovna/češki_krkonoše-dijalekt.jpg" target="_blank"><img src="naslovna_th/češki_krkonoše-dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/češki_krkonoše-dijalekt.jpg" target="_blank"><img src="prva_th/češki_krkonoše-dijalekt.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Češki, Slovačko-Moravski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Moravian_Slovakia" target="_blank">Czech, Slovak of Moravia language</a></td>
+        <td>Malušenký princ</td>
+        <td class="image"><a href="naslovna/češko_moravsko_slovački.jpg" target="_blank"><img src="naslovna_th/češko_moravsko_slovački.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/češko_moravsko_slovački.jpg" target="_blank"><img src="prva_th/češko_moravsko_slovački.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Češki Valaški jezik</td>
