--- a/index.html
+++ b/index.html
@@ -223,6 +223,14 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpaki-latinica_pinta.jpg" target="_blank"><img src="naslovna_th/srpaki-latinica_pinta.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpaki-latinica_pinta.jpg" target="_blank"><img src="prva_th/srpaki-latinica_pinta.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin Graphic novel</a></td>
         <td>Mali princ strip</td>
         <td class="image"><a href="naslovna/srpski-latinica_strip.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_strip.jpg" width="50px"></a></td>
