--- a/index.html
+++ b/index.html
@@ -870,6 +870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Aragonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Aragonese_language" target="_blank">Aragonese language</a></td>
+        <td>O Prenzipet</td>
+        <td class="image"><a href="naslovna/aragonski.jpg" target="_blank"><img src="naslovna_th/aragonski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/aragonski.jpg" target="_blank"><img src="prva_th/aragonski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">الامير الصغير</td>
