--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -790,6 +790,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ajmara, Hunakanejski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Aymara_language" target="_blank">Aymara, Huancané dialect</a></td>
+        <td>Laqampu Yuqallqally</td>
+        <td class="image"><a href="naslovna/ajmara_hunakanejski-dijalekt.jpg" target="_blank"><img src="naslovna_th/ajmara_hunakanejski-dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ajmara_hunakanejski-dijalekt.jpg" target="_blank"><img src="prva_th/ajmara_hunakanejski-dijalekt.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Albanski, Gegijski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Albanian_language" target="_blank">Albanian (Gheg) language</a></td>
         <td>Princi i Vogël</td>
