--- a/index.html
+++ b/index.html
@@ -2950,6 +2950,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski Mursijanski dijalect</td>
+        <td><a href="https://en.wikipedia.org/wiki/Murcian_Spanish" target="_blank">Murcian Spanish language</a></td>
+        <td>Er Principico</td>
+        <td class="image"><a href="naslovna/spanski_mursijan.jpg" target="_blank"><img src="naslovna_th/spanski_mursijan.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_mursijan.jpg" target="_blank"><img src="prva_th/spanski_mursijan.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Švedski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swedish_language" target="_blank">Swedish language</a></td>
         <td>Lille prinsen</td>
