--- a/index.html
+++ b/index.html
@@ -2932,6 +2932,14 @@
         <td class="image"><a href="naslovna/spanski-gaceria_sleng.jpg" target="_blank"><img src="naslovna_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanski-gaceria_sleng.jpg" target="_blank"><img src="prva_th/spanski-gaceria_sleng.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski Kantabrijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cantabrian_language" target="_blank">Spanish Cantabrian language</a></td>
+        <td>El Principucu</td>
+        <td class="image"><a href="naslovna/spanski_kantabrijski.jpg" target="_blank"><img src="naslovna_th/spanski_kantabrijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_kantabrijski.jpg" target="_blank"><img src="prva_th/spanski_kantabrijski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Španski jezik iz Kordobe</td>
