--- a/index.html
+++ b/index.html
@@ -2916,13 +2916,21 @@
         <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spansko-argentinski.jpg" target="_blank"><img src="prva_th/spansko-argentinski.jpg" width="50px"></a></td>
       </tr>
-     <tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Španski Čeli, Madridski sleng</td>
         <td><a href="https://en.wikipedia.org/wiki/Cheli" target="_blank">Spanish Cheli, Madrid slang</a></td>
         <td>El chaval principeras</td>
         <td class="image"><a href="naslovna/spanski-madridski_dijalekt.jpg" target="_blank"><img src="naslovna_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spanski-madridski_dijalekt.jpg" target="_blank"><img src="prva_th/spanski-madridski_dijalekt.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski Čuro dijalekt</td>
+        <td><a href="https://es.wikipedia.org/wiki/Castellano_churro" target="_blank">Spanish Churro language</a></td>
+        <td>El Prencipico</td>
+        <td class="image"><a href="naslovna/spanski_čuro.jpg" target="_blank"><img src="naslovna_th/spanski_čuro.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_čuro.jpg" target="_blank"><img src="prva_th/spanski_čuro.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
