--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2886,6 +2886,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski Čuro dijalekt</td>
+        <td><a href="https://es.wikipedia.org/wiki/Castellano_churro" target="_blank">Spanish Churro language</a></td>
+        <td>El Prencipico</td>
+        <td class="image"><a href="naslovna/spanski_čuro.jpg" target="_blank"><img src="naslovna_th/spanski_čuro.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_čuro.jpg" target="_blank"><img src="prva_th/spanski_čuro.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski Gaceria sleng</td>
         <td><a href="https://en.wikipedia.org/wiki/Gacer%C3%ADa" target="_blank">Spanish Gaceria slang</a></td>
         <td>El pitoche engrullón</td>
