--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2875,8 +2875,16 @@
         <td>El nene principita</td>
         <td class="image"><a href="naslovna/spansko-argentinski.jpg" target="_blank"><img src="naslovna_th/spansko-argentinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/spansko-argentinski.jpg" target="_blank"><img src="prva_th/spansko-argentinski.jpg" width="50px"></a></td>
+       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Španski Argentinski Rosarigasino jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rosarigasino" target="_blank"> Spanish Rosarigasino language</a></td>
+        <td>El Principigasito</td>
+        <td class="image"><a href="naslovna/spanski-argentinski_rosarigasinosleng.jpg" target="_blank"><img src="naslovna_th/spanski-argentinski_rosarigasinosleng.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski-argentinski_rosarigasinosleng.jpg" target="_blank"><img src="prva_th/spanski-argentinski_rosarigasinosleng.jpg" width="50px"></a></td>
       </tr>
-    <tr>
+     <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Španski Čeli, Madridski sleng</td>
         <td><a href="https://en.wikipedia.org/wiki/Cheli" target="_blank">Spanish Cheli, Madrid slang</a></td>
