--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1220,6 +1220,14 @@
         <td class="image"><a href="naslovna/engleski.jpg" target="_blank"><img src="naslovna_th/engleski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/engleski.jpg" target="_blank"><img src="prva_th/engleski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Engleski jezik, za decu</td>
+        <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language, for children</a></td>
+        <td>The Little prince</td>
+        <td class="image"><a href="naslovna/engleski-zadecu.jpg" target="_blank"><img src="naslovna_th/engleski-zadecu.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/engleski-zadecu.jpg" target="_blank"><img src="prva_th/engleski-zadecu.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Staroengleski jezik</td>
