--- a/index.html
+++ b/index.html
@@ -1270,6 +1270,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Engleski jezik, za decu</td>
+        <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language, for children</a></td>
+        <td>The Little prince</td>
+        <td class="image"><a href="naslovna/engleski-80godina.jpg" target="_blank"><img src="naslovna_th/engleski-80godina.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/engleski-80godina.jpg" target="_blank"><img src="prva_th/engleski-80godina.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Staroengleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Anglo-Saxon_runes" target="_blank">Anglo-Saxon runes</a></td>
         <td>Be þam Lẏtlan Æþelinge</td>
