--- a/index.html
+++ b/index.html
@@ -3292,6 +3292,14 @@
         <td class="image"><a href="naslovna/valserski.jpg" target="_blank"><img src="naslovna_th/valserski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/valserski.jpg" target="_blank"><img src="prva_th/valserski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Varajski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Waray_language" target="_blank">Waray language</a></td>
+        <td>An Ditoy Nga Prinsipe</td>
+        <td class="image"><a href="naslovna/varajski.jpg" target="_blank"><img src="naslovna_th/varajski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/varajski.jpg" target="_blank"><img src="prva_th/varajski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Velški jezik</td>
