--- a/index.html
+++ b/index.html
@@ -1702,6 +1702,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Bazilikato dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Gallo-Italic_of_Basilicata" target="_blank">Italian from Basilicata</a></td>
+        <td>U Pringëpë zicchë</td>
+        <td class="image"><a href="naslovna/italijanski_bazilikato.jpg" target="_blank"><img src="naslovna_th/italijanski_bazilikato.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_bazilikato.jpg" target="_blank"><img src="prva_th/italijanski_bazilikato.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Bolonjski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Languages_of_Italy" target="_blank">Italian, Bolognese dialect</a></td>
         <td>Al Pränzip Fangén</td>
