--- a/index.html
+++ b/index.html
@@ -932,6 +932,14 @@
         <td class="image"><a href="naslovna/asturijski.jpg" target="_blank"><img src="naslovna_th/asturijski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/asturijski.jpg" target="_blank"><img src="prva_th/asturijski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Asturleonski rebolar dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/El_Rebollar_(Salamanca)" target="_blank"> Astur-Leonese El Rebollal dialect</a></td>
+        <td>El Principinu</td>
+        <td class="image"><a href="naslovna/asturleonski_rebolal.jpg" target="_blank"><img src="naslovna_th/asturleonski_rebolal.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/asturleonski_rebolal.jpg" target="_blank"><img src="prva_th/asturleonski_rebolal.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Azerski jezik</td>
