--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2966,6 +2966,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Španski Mančego dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/La_Mancha" target="_blank">Spanish Manchego dialect</a></td>
+        <td>El Principete</td>
+        <td class="image"><a href="naslovna/spanski_mancego.jpg" target="_blank"><img src="naslovna_th/spanski_mancego.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/spanski_mancego.jpg" target="_blank"><img src="prva_th/spanski_mancego.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski Mursijanski dijalect</td>
         <td><a href="https://en.wikipedia.org/wiki/Murcian_Spanish" target="_blank">Murcian Spanish language</a></td>
         <td>Er Principico</td>
