--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1766,6 +1766,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Senigalski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Senigallia" target="_blank">Italian Senigallia dialect</a></td>
+        <td>el Principiŋ</td>
+        <td class="image"><a href="naslovna/italijanski_senigalski.jpg" target="_blank"><img src="naslovna_th/italijanski_senigalski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_senigalski.jpg" target="_blank"><img src="prva_th/italijanski_senigalski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Tičino dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Ticinese_dialect" target="_blank">Italian, Ticinese dialect</a></td>
         <td>Ul principe pinin</td>
