--- a/index.html
+++ b/index.html
@@ -942,6 +942,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Asturleonski Senabres dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sanabria_(comarca)" target="_blank"> Astur-Leonese Sanabria dialect</a></td>
+        <td>El Principicu</td>
+        <td class="image"><a href="naslovna/asturleonski_senabres.jpg" target="_blank"><img src="naslovna_th/asturleonski_senabres.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/asturleonski_senabres.jpg" target="_blank"><img src="prva_th/asturleonski_senabres.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Azerski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Azerbaijani_language" target="_blank">Azerbaijani language</a></td>
         <td>Balaca şahzadə</td>
