--- a/index.html
+++ b/index.html
@@ -1334,6 +1334,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Farski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Faroese_language" target="_blank">Faroese language</a></td>
+        <td>Tann lìtli prinsurin</td>
+        <td class="image"><a href="naslovna/farski.jpg" target="_blank"><img src="naslovna_th/farski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/farski.jpg" target="_blank"><img src="prva_th/farski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Finski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Finnish_language" target="_blank">Finnish language</a></td>
         <td>Pikku Prinssi</td>
