--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1291,6 +1291,14 @@
         <td>Väike prints</td>
         <td class="image"><a href="naslovna/estonski.jpg" target="_blank"><img src="naslovna_th/estonski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/estonski.jpg" target="_blank"><img src="prva_th/estonski.jpg" width="50px"></a></td>
+       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Farski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Faroese_language" target="_blank">Faroese language</a></td>
+        <td>Tann lìtli prinsurin</td>
+        <td class="image"><a href="naslovna/farski.jpg" target="_blank"><img src="naslovna_th/farski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/farski.jpg" target="_blank"><img src="prva_th/farski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
