--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1870,6 +1870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Joruba jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Yoruba_language" target="_blank">Yoruba language</a></td>
+        <td>Àrẹ̀mọ Ọba Kékeré</td>
+        <td class="image"><a href="naslovna/joruba.jpg" target="_blank"><img src="naslovna_th/joruba.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/joruba.jpg" target="_blank"><img src="prva_th/joruba.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kabardinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kabardian_language" target="_blank">Kabardian language</a></td>
         <td>Пщы Нэнау</td>
