--- a/index.html
+++ b/index.html
@@ -2468,6 +2468,14 @@
         <td class="image"><a href="naslovna/nemacki_bern.jpg" target="_blank"><img src="naslovna_th/nemacki_bern.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/nemacki_bern.jpg" target="_blank"><img src="prva_th/nemacki_bern.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Cimbrijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cimbrian_language" target="_blank">German Cimbrian language</a></td>
+        <td>Dar Khlumma Printӡ</td>
+        <td class="image"><a href="naslovna/nemacki-cimbrijski.jpg" target="_blank"><img src="naslovna_th/nemacki-cimbrijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki-cimbrijski.jpg" target="_blank"><img src="prva_th/nemacki-cimbrijski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
