--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2430,6 +2430,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, Cimbrijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cimbrian_language" target="_blank">German Cimbrian language</a></td>
+        <td>Dar Khlumma Printӡ</td>
+        <td class="image"><a href="naslovna/nemacki-cimbrijski.jpg" target="_blank"><img src="naslovna_th/nemacki-cimbrijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki-cimbrijski.jpg" target="_blank"><img src="prva_th/nemacki-cimbrijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački, istočno pomeranski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/East_Pomeranian_dialect" target="_blank">East Pomeranian dialect</a></td>
         <td>Dai klair prins</td>
