--- a/index.html
+++ b/index.html
@@ -2030,6 +2030,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kečua Kusko jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cuzco_Quechua_language" target="_blank">Cuzco-Quechua language</a></td>
+        <td>Aukillu</td>
+        <td class="image"><a href="naslovna/kečua_kusko.jpg" target="_blank"><img src="naslovna_th/kečua_kusko.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kečua_kusko.jpg" target="_blank"><img src="prva_th/kečua_kusko.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kečua provincije Santjago</td>
         <td><a href="https://en.wikipedia.org/wiki/Santiague%C3%B1o_Quechua" target="_blank">Santiagueño Quechua</a></td>
         <td>Principe Huahua</td>
