--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1988,6 +1988,14 @@
         <td class="image"><a href="naslovna/kecua.jpg" target="_blank"><img src="naslovna_th/kecua.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kecua.jpg" target="_blank"><img src="prva_th/kecua.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kečua Kusko jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cuzco_Quechua_language" target="_blank">Cuzco-Quechua language</a></td>
+        <td>Aukillu</td>
+        <td class="image"><a href="naslovna/kečua_kusko.jpg" target="_blank"><img src="naslovna_th/kečua_kusko.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kečua_kusko.jpg" target="_blank"><img src="prva_th/kečua_kusko.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kečua provincije Santjago</td>
