--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1766,7 +1766,7 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Italijanski, Napolitanski Pićentino dijalekt</td>
+        <td>Italijanski, Napolitanski Pičentino dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Neapolitan_language" target="_blank">Italian, Neapolitan dialect</a></td>
         <td>'O princepe nennillo</td>
         <td class="image"><a href="naslovna/italijanski-napolitanski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-napolitanski_dijalekt.jpg" width="50px"></a></td>
