--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1820,6 +1820,14 @@
         <td class="image"><a href="naslovna/italijanski-urbanija.jpg" target="_blank"><img src="naslovna_th/italijanski-urbanija.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-urbanija.jpg" target="_blank"><img src="prva_th/italijanski-urbanija.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Venecijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Italian Venetian language</a></td>
+        <td>El Principe Piçenin</td>
+        <td class="image"><a href="naslovna/italijanski_venecijanski.jpg" target="_blank"><img src="naslovna_th/italijanski_venecijanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanski_venecijanski.jpg" target="_blank"><img src="prva_th/italijanski_venecijanski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Jakutski jezik</td>
