--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1700,6 +1700,14 @@
         <td class="image"><a href="naslovna/italijanski-bolonjski_dijalekt.jpg" target="_blank"><img src="naslovna_th/italijanski-bolonjski_dijalekt.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanski-bolonjski_dijalekt.jpg" target="_blank"><img src="prva_th/italijanski-bolonjski_dijalekt.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Italijanski Donjoveronski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Verona" target="_blank">Italian from lower Verona</a></td>
+        <td>El Principe Butin</td>
+        <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Fijumanski dijalekt</td>
@@ -3355,14 +3363,6 @@
         <td>Y Tywysog Bach</td>
         <td class="image"><a href="naslovna/velski.jpg" target="_blank"><img src="naslovna_th/velski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/velski.jpg" target="_blank"><img src="prva_th/velski.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Venecijanski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Venetian Lower Veronese language</a></td>
-        <td>El Principe Butin</td>
-        <td class="image"><a href="naslovna/verona.jpg" target="_blank"><img src="naslovna_th/verona.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/verona.jpg" target="_blank"><img src="prva_th/verona.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
