--- a/index.html
+++ b/index.html
@@ -2516,6 +2516,14 @@
         <td class="image"><a href="naslovna/pomerano.jpg" target="_blank"><img src="naslovna_th/pomerano.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/pomerano.jpg" target="_blank"><img src="prva_th/pomerano.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački, oblast palanine Ron</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rh%C3%B6n_Mountains" target="_blank">German from the Rhön mountains</a></td>
+        <td>Es klei Prinzee</td>
+        <td class="image"><a href="naslovna/nemacki_ronplanine.jpg" target="_blank"><img src="naslovna_th/nemacki_ronplanine.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_ronplanine.jpg" target="_blank"><img src="prva_th/nemacki_ronplanine.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Nemački švapski jezik</td>
