--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -2478,6 +2478,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački, oblast palanine Ron</td>
+        <td><a href="https://en.wikipedia.org/wiki/Rh%C3%B6n_Mountains" target="_blank">German from the Rhön mountains</a></td>
+        <td>Es klei Prinzee</td>
+        <td class="image"><a href="naslovna/nemacki_ronplanine.jpg" target="_blank"><img src="naslovna_th/nemacki_ronplanine.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemacki_ronplanine.jpg" target="_blank"><img src="prva_th/nemacki_ronplanine.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački švapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Swabian_German" target="_blank">German Swabian dialect</a></td>
         <td>Dr kleine Prinz</td>
