--- a/index.html
+++ b/index.html
@@ -2464,6 +2464,14 @@
         <td class="number"><span class="auto"></span></td>
         <td>Navatl ili Astečki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Nahuatl" target="_blank">Nahuatl language</a></td>
+        <td>In Tlazotepiltzin</td>
+        <td class="image"><a href="naslovna/nahuatl_španski_engleski.jpg" target="_blank"><img src="naslovna_th/nahuatl_španski_engleski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nahuatl_španski_engleski.jpg" target="_blank"><img src="prva_th/nahuatl_španski_engleski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Navatl Haustečki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Huasteca_Nahuatl" target="_blank">Nahuatl Huasteca language</a></td>
         <td>In Piltlajtoanpili</td>
         <td class="image"><a href="naslovna/astecki.jpg" target="_blank"><img src="naslovna_th/astecki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/astecki.jpg" target="_blank"><img src="prva_th/astecki.jpg" width="50px"></a></td>
