--- a/index.html
+++ b/index.html
@@ -2663,10 +2663,18 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Persijski Farsi jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian Farsi language</a></td>
         <td class="rtl">شازده کوچولو</td>
         <td class="image"><a href="naslovna/farsi.jpg" target="_blank"><img src="naslovna_th/farsi.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/farsi.jpg" target="_blank"><img src="prva_th/farsi.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Persijski Farsi jezik (ćirilica)</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tajik_language" target="_blank">Persian Farsi language, in Cyrillic script</a></td>
+        <td>Шаӽзода Кучулу<span class="rtl">شــــازده كوچـولـو </span/td>
+        <td class="image"><a href="naslovna/tadzicki.jpg" target="_blank"><img src="naslovna_th/tadzicki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/tadzicki.jpg" target="_blank"><img src="prva_th/tadzicki.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -3131,14 +3139,6 @@
         <td>Lille prinsen</td>
         <td class="image"><a href="naslovna/svedski.jpg" target="_blank"><img src="naslovna_th/svedski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/svedski.jpg" target="_blank"><img src="prva_th/svedski.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Tadžički jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tajik_language" target="_blank">Tajik language</a></td>
-        <td>Шаӽзода Кучулу<span class="rtl">شــــازده كوچـولـو </span/td>
-        <td class="image"><a href="naslovna/tadzicki.jpg" target="_blank"><img src="naslovna_th/tadzicki.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/tadzicki.jpg" target="_blank"><img src="prva_th/tadzicki.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
