--- a/index.html
+++ b/index.html
@@ -1454,6 +1454,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Furlanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Friulian_language" target="_blank">Friulian language</a></td>
+        <td>Il Piçul Princip</td>
+        <td class="image"><a href="naslovna/furlanski.jpg" target="_blank"><img src="naslovna_th/furlanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/furlanski.jpg" target="_blank"><img src="prva_th/furlanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Futunski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Futunan_language" target="_blank">Futunan language</a></td>
         <td>Ko Le Gā Tama Sau </td>
