--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1412,6 +1412,14 @@
         <td class="image"><a href="naslovna/filipinski-tagalog.jpg" target="_blank"><img src="naslovna_th/filipinski-tagalog.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/filipinski-tagalog.jpg" target="_blank"><img src="prva_th/filipinski-tagalog.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Furlanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Friulian_language" target="_blank">Friulian language</a></td>
+        <td>Il Piçul Princip</td>
+        <td class="image"><a href="naslovna/furlanski.jpg" target="_blank"><img src="naslovna_th/furlanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/furlanski.jpg" target="_blank"><img src="prva_th/furlanski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Futunski jezik</td>
